Advance in K8s/Secret -Ingress (Https)/non-ingress.yaml
##################################################
# Secret-TLS Ingress - Manifest
##################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: non-ingress
  namespace: web
  labels:
    app: web-app
spec:
  ingressClassName: nginx
  rules:
  - host: denizturkmen.devops-deniz.net
    http:
      paths:
      - backend:
          service:
            name: web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
