Advance in K8s/Secret -Ingress (Https)/tls-ingress.yaml
##################################################
# Secret-TLS Ingress - Manifest
##################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: non-ingress
  namespace: web
  labels:
    app: web-app
spec:
  tls:
  - hosts:
      - denizturkmen.com
    secretName: ing-tls
  ingressClassName: nginx
  rules:
  - host: denizturkmen.com
    http:
      paths:
      - backend:
          service:
            name: web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
